# engine

./: .clang-format  CMakeLists.txt  Makefile
include/: ProgramController.h  Raycaster.h
src/: ProgramController.cpp  Raycaster.cpp  main.cpp
